<resources>
    <string name="app_name">Writer</string>
    <string name="action_settings">Settings</string>
    <string name="authorization">войти</string>
    <string name="error_authorization">Ошибка авторизации. Код ошибки:</string>
    <string name="error_getDataFromVK">Ошибка получения данных пользователя от ВК. Код ошибки:</string>
    <string name="error_getDataFromFB">Ошибка получения данных пользователя из базы данных. Код ошибки:</string>
    <string name="error_notDataAboutUserInFB">Не найдены данные пользователя в базе данных.</string>
    <string name="error_notDataInTitleWork">Для сохранения черновика добавте название работы.</string>
    <string name="error_saveFailInFB">Не удается соханить постер.</string>
    <string name="text_btn_add_history_profile">Начать писать</string>
    <string name="text_btn_drafts_profile">Черновики</string>
    <integer name="com_vk_sdk_AppId">7075812</integer>
    <string name="work_name">Название работы:</string>
    <string name="work_description">Краткое описание:</string>
    <string name="write">Пишите! :)</string>
    <string name="publish">Опубликовать</string>
    <string name="to_draft">В черновики</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_works">Мои работы</string>
    <string name="i_read">Читаю</string>
    <string name="In_read">В читаю</string>

</resources>
