<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.WriteFragment">

    <ScrollView
            android:id="@+id/wrapper_data_in_write"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttons_write"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:background="@drawable/background_text"
                    android:maxLength="30"
                    android:layout_marginTop="10dp"
                    android:hint="@string/work_name"
                    android:textSize="@dimen/size_title"
                    android:padding="7dp"
                    android:id="@+id/work_name_write"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="40dp"
                    android:id="@+id/poster_wrapper_write"
                    app:layout_constraintTop_toBottomOf="@+id/work_name_write"
                    android:background="@drawable/background_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="150dp"
                    android:maxHeight="400dp">

                <ImageView
                        android:id="@+id/ic_poster_write"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:src="@drawable/ic_add_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <com.github.rahatarmanahmed.cpv.CircularProgressView
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/loading_poster_write"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:cpv_animAutostart="true"
                        app:cpv_color="@color/colorPrimary"
                        app:cpv_indeterminate="true" />

                <ImageView
                        android:scaleType="centerCrop"
                        android:visibility="visible"
                        android:id="@+id/poster_write"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:visibility="gone"
                        android:src="@drawable/ic_delete"
                        android:id="@+id/btn_delete_poster"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/background_btn_profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                    android:background="@drawable/background_text"
                    android:layout_marginTop="30dp"
                    android:hint="@string/work_description"
                    android:textSize="16dp"
                    android:padding="7dp"
                    android:maxLength="100"
                    android:id="@+id/work_description_write"
                    app:layout_constraintTop_toBottomOf="@+id/poster_wrapper_write"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:background="@drawable/background_text"
                    android:layout_marginTop="30dp"
                    android:hint="@string/write"
                    android:textSize="16dp"
                    android:padding="7dp"
                    android:id="@+id/work_text_write"
                    app:layout_constraintTop_toBottomOf="@+id/work_description_write"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_write"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="@string/to_draft"
                android:id="@+id/btn_draft_write"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_publish_write"
                android:background="@drawable/background_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/publish"
                android:id="@+id/btn_publish_write"
                app:layout_constraintLeft_toRightOf="@+id/btn_draft_write"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/background_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="5dp"
            android:id="@+id/loading_add_write"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"
            app:cpv_indeterminate="true" />

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="5dp"
            android:id="@+id/loading_get_write"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"
            app:cpv_indeterminate="true" />

</androidx.constraintlayout.widget.ConstraintLayout>