<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.ProfileFragment">

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/loading_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"
            app:cpv_indeterminate="true" />

    <TextView
            android:visibility="gone"
            android:textSize="16dp"
            android:textColor="@color/colorError"
            android:id="@+id/error_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/data_in_profile"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/data_about_user_profile"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_profile"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:background="@drawable/background_photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>

                <TextView
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:id="@+id/name_profile"
                        app:layout_constraintTop_toTopOf="@+id/avatar_profile"
                        app:layout_constraintLeft_toRightOf="@+id/avatar_profile"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:textSize="20dp"
                        android:id="@+id/city_profile"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintLeft_toRightOf="@+id/avatar_profile"
                        app:layout_constraintTop_toBottomOf="@+id/name_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:src="@drawable/ic_update_data_about_user"
                        android:id="@+id/btn_update_data_about_user_profile"
                        app:layout_constraintTop_toTopOf="@+id/name_profile"
                        app:layout_constraintBottom_toBottomOf="@+id/name_profile"
                        app:layout_constraintLeft_toRightOf="@+id/name_profile"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/btn_add_history_profile"
                        android:text="@string/text_btn_add_history_profile"
                        app:layout_constraintTop_toBottomOf="@+id/avatar_profile"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/background_btn_profile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                />

                <Button
                        android:id="@+id/btn_drafts_profile"
                        android:text="@string/text_btn_drafts_profile"
                        app:layout_constraintTop_toBottomOf="@+id/btn_add_history_profile"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/background_btn_profile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/background_poster"
                    android:id="@+id/btn_navigate_profile"
                    app:layout_constraintTop_toBottomOf="@+id/data_about_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:text="@string/my_works"
                        android:id="@+id/btn_my_work_profile"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/btn_i_read_profile"
                        android:background="@color/colorWhite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                <Button
                        android:text="@string/i_read"
                        android:id="@+id/btn_i_read_profile"
                        app:layout_constraintLeft_toRightOf="@+id/btn_my_work_profile"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:background="@color/colorWhite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="7dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_navigate_profile"
                    android:id="@+id/works_recycler_profile"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>